[project]
name = "Machine_Learning_2"
version = "0.1.0"
description = "learing how to use github and python coding for machine learning"
authors = [
    {name = "FelixMahlknecht",email = "mf9512@mci4me.at"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
